--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.4",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
