--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && node generateSitemap.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "node generateSitemap.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -16,6 +17,7 @@
     "framer-motion": "^10.12.18",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
+    "next-sitemap": "^4.2.3",
     "nextjs-progressbar": "^0.0.16",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
