--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.18",
+    "js-cookie": "^3.0.5",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-sitemap": "^4.2.3",
     "nextjs-progressbar": "^0.0.16",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
+    "onesignal": "^0.1.2",
     "otp-gen-agent": "^1.1.2",
     "qs": "^6.11.2",
     "razorpay": "^2.9.0",
