--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "js-cookie": "^3.0.5",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
-    "next-sitemap": "^4.2.3",
     "nextjs-progressbar": "^0.0.16",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
@@ -37,8 +36,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.4",
-    "shortid": "^2.2.16",
-    "sitemap": "^7.1.1"
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
