--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,7 +16,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.18",
     "js-cookie": "^3.0.5",
-    "next": "13.4.7",
+    "next": "13.4.10",
     "next-auth": "^4.22.1",
     "nextjs-progressbar": "^0.0.16",
     "node-cron": "^3.0.2",
