--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@vercel/analytics": "^1.0.2",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.18",
     "js-cookie": "^3.0.5",
